--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
                                             <a class="nav-link" href="about.html">Sobre nosotros</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="portfolio.html">Portfolio </a>
+                                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="contact.html">Contactanos</a>
+                                            <a class="nav-link" href="contact.html">Contáctanos</a>
                                         </li>
                                     </ul>
                                     <form class="form-inline">
@@ -134,9 +134,7 @@
                         <a href="">
                             <img src="images/linkedin.png" alt="">
                         </a>
-                        <a href="">
-                            <img src="images/dribble.png" alt="">
-                        </a>
+
                         <a href="">
                             <img src="images/pinterest.png" alt="">
                         </a>
@@ -147,7 +145,13 @@
     </section>
 
     <!-- Fin  Seccion Sobre Redes -->
-
+    <section class="container-fluid footer_section">
+        <div class="container">
+            <p>
+                &copy; 2023 Todos los derechos reservados
+            </p>
+        </div>
+    </section>
     
 
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
