--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -41,19 +41,19 @@
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
-                                    <ul class="navbar-nav  ">
+                                    <ul class="navbar-nav">
                                         <li class="nav-item ">
-                                            <a class="nav-link" href="index.html">Inicio <span
+                                            <a class="nav-link" href="index.html">Inicio<span
                                                     class="sr-only">(actual)</span></a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="about.html"> Sobre nosotros</a>
+                                            <a class="nav-link" href="about.html">Sobre nosotros</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                                         </li>
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="contact.html">Contact Us</a>
+                                            <a class="nav-link" href="contact.html">Contáctanos</a>
                                         </li>
                                     </ul>
                                     <form class="form-inline">
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="heading_container">
                 <h2>
-                    Contact Us
+                    Contáctanos
                 </h2>
             </div>
             <div class="">
@@ -92,16 +92,18 @@
                             <div class="contact_form-container">
                                 <div>
                                     <div>
-                                        <input type="text" placeholder="Name">
+                                        <input type="text" placeholder="Nombre completo*" required>
                                     </div>
                                     <div>
-                                        <input type="text" placeholder="Phone Number">
+                                        <input type="text" placeholder="Teléfono">
                                     </div>
                                     <div>
-                                        <input type="email" placeholder="Email">
+                                        <input type="email" placeholder="Correo Electrónico*" required>
                                     </div>
                                     <div class="">
-                                        <input type="text" placeholder="Message" class="message_input">
+                                        <input type="text"
+                                            placeholder="Escribe aquí tus dudas, sugerencias o cualquier información"
+                                            class="message_input">
                                     </div>
                                     <div class=" d-flex justify-content-center ">
                                         <button type="submit">
@@ -128,7 +130,7 @@
                 <div class="info_social">
                     <div class="d-flex justify-content-center">
                         <h4 class="">
-                            Follow on
+                            SÍGUENOS
                         </h4>
                     </div>
                     <div class="social_box">
@@ -145,9 +147,6 @@
                             <img src="images/linkedin.png" alt="">
                         </a>
                         <a href="">
-                            <img src="images/dribble.png" alt="">
-                        </a>
-                        <a href="">
                             <img src="images/pinterest.png" alt="">
                         </a>
                     </div>
@@ -162,8 +161,7 @@
     <section class="container-fluid footer_section">
         <div class="container">
             <p>
-                &copy; 2019 All Rights Reserved By
-                <a href="https://html.design/">Free Html Templates</a>
+                &copy; 2023 Todos los derechos reservados
             </p>
         </div>
     </section>
