--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                                 <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                                     <ul class="navbar-nav  ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="index.html">Inicio <span
+                                            <a class="nav-link" href="index.html">Inicio<span
                                                     class="sr-only">(actual)</span></a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="about.html"> Sobre nosotros</a>
+                                            <a class="nav-link" href="about.html">Sobre nosotros</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="portfolio.html"> Portafolio </a>
+                                            <a class="nav-link" href="portfolio.html">Portafolio</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="contact.html">Contáctanos</a>
@@ -84,9 +84,7 @@
                                             uraya
                                         </h1>
                                         <p>
-                                            Es un hecho establecido desde hace mucho tiempo que el lector se distraerá
-                                            con la
-                                            contenido legible.
+                                            Las mejores fotos de canaria están en nuesta página.
                                         </p>
                                         <div class="btn-box">
                                             <a href="" class="btn-1">
@@ -116,9 +114,7 @@
 
                                         </h1>
                                         <p>
-                                            Es un hecho establecido desde hace mucho tiempo que el lector se distraerá
-                                            con la
-                                            contenido legible
+                                            Estilo, detalle y calidad, todo en cada una de tus fotos.
                                         </p>
                                         <div class="btn-box">
                                             <a href="" class="btn-1">
@@ -147,9 +143,7 @@
                                             Fotografías de otro mundo <br>
                                         </h1>
                                         <p>
-                                            Es un hecho establecido desde hace mucho tiempo que el lector se distraerá
-                                            con la
-                                            contenido legible
+                                            Sé la envidia de tus amigos con nuestras impresionantes fotos.
                                         </p>
                                         <div class="btn-box">
                                             <a href="" class="btn-1">
@@ -190,7 +184,7 @@
         <div class="container">
             <div class="heading_container">
                 <h2>
-                    About Studio
+                    Sobre el estudio
                 </h2>
             </div>
             <div class="box">
@@ -202,13 +196,12 @@
                 </div>
                 <div class="detail-box">
                     <p>
-                        Es un hecho establecido desde hace mucho tiempo que el lector se distraerá con el contenido
-                        legible de una página.
-                        cuando
-                        mirando su diseño. El objetivo de utilizar Lorem Ipsum es que tiene un efecto más o menos
-                        normal.
-                        distribución de
-                        letras,
+                        En Uliya, llevamos años capturando momentos preciosos y transformándolos en recuerdos duraderos. Desde nuestros humildes comienzos hasta hoy, hemos tenido el privilegio de compartir innumerables historias a través de la lente de nuestra cámara.
+                        <br><br>
+                        En el corazón de nuestro trabajo está la creencia en la magia de la fotografía para contar historias. Nos esforzamos por capturar la esencia única de cada momento, creando imágenes que transmiten emociones genuinas y perduran en el tiempo.
+                        <br><br>
+                        En Uliya, no se trata solo de tomar fotografías; se trata de crear experiencias memorables. Nos dedicamos a trabajar estrechamente con nuestros clientes para comprender sus visiones y plasmarlas de manera auténtica y artística.      
+    
                     </p>
 
                 </div>
@@ -242,7 +235,7 @@
                         </div>
                     </div>
                     <div class="img-box b-2">
-                        <img src="images/p-2.jpg" alt="">
+                        <img src="images/hielo.jpg" alt="">
                         <div class="btn-box">
                             <a href="" class="btn-1">
 
@@ -253,7 +246,7 @@
                 <div class="box-2">
                     <div class="box-2-top">
                         <div class="img-box b-3">
-                            <img src="images/p-3.jpg" alt="">
+                            <img src="images/montana-nivea.jpg" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -263,7 +256,7 @@
                     </div>
                     <div class="box-2-top2">
                         <div class="img-box b-4">
-                            <img src="images/p-4.jpg" alt="">
+                            <img src="images/Montañas.jpg" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -273,7 +266,7 @@
                     </div>
                     <div class="box-2-btm">
                         <div class="img-box b-5">
-                            <img src="images/p-5.jpg" alt="">
+                            <img src="images/Jesus.png" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -292,7 +285,7 @@
                 </div>
             </div>
             <div class="see_btn">
-                <a href="">
+                <a href="portfolio.html">
                     Ver más
                 </a>
             </div>
@@ -321,7 +314,7 @@
                     </div>
                     <div class="detail-box">
                         <h2>
-                            Mas de 1000
+                            + 1000
                         </h2>
                         <h6>
                             Sesiones fotográficas
@@ -334,10 +327,10 @@
                     </div>
                     <div class="detail-box">
                         <h2>
-                            9000+
+                            + 9000
                         </h2>
                         <h6>
-                            Happy Customers
+                            Clientes satisfechos
                         </h6>
                     </div>
                 </div>
@@ -347,10 +340,10 @@
                     </div>
                     <div class="detail-box">
                         <h2>
-                            1000+
+                            + 1000
                         </h2>
                         <h6>
-                            Archive Photographs
+                            Fotografías de archivo
                         </h6>
                     </div>
                 </div>
@@ -366,10 +359,10 @@
         <div class="container">
             <div class="heading_container">
                 <h2>
-                    Testimonial
+                    Opiniones
                 </h2>
                 <p>
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi
+                    Lee lo que piensan nuestros clientes sobre nosotros
                 </p>
             </div>
             <div class="layout_padding2-top">
@@ -379,11 +372,11 @@
                             <div class="btn_container">
                                 <a class="carousel-control-prev" href="#carouselExample2Controls" role="button"
                                     data-slide="prev">
-                                    <span class="sr-only">Previous</span>
+                                    <span class="sr-only">Previo</span>
                                 </a>
                                 <a class="carousel-control-next" href="#carouselExample2Controls" role="button"
                                     data-slide="next">
-                                    <span class="sr-only">Next</span>
+                                    <span class="sr-only">Próximo</span>
                                 </a>
                             </div>
                         </div>
@@ -392,7 +385,7 @@
                                 <div class="carousel-item active">
                                     <div class="detail-box">
                                         <h4>
-                                            Aloz den
+                                            Ricardo Ositia
                                         </h4>
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -410,7 +403,7 @@
                                 <div class="carousel-item ">
                                     <div class="detail-box">
                                         <h4>
-                                            Aloz den
+                                            Laura Perdomo
                                         </h4>
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -428,7 +421,7 @@
                                 <div class="carousel-item ">
                                     <div class="detail-box">
                                         <h4>
-                                            Aloz den
+                                            Matias Curbello
                                         </h4>
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -466,7 +459,7 @@
         <div class="container">
             <div class="heading_container">
                 <h2>
-                    Contact Us
+                    Contacta con nosotros
                 </h2>
             </div>
             <div class="">
@@ -476,20 +469,22 @@
                             <div class="contact_form-container">
                                 <div>
                                     <div>
-                                        <input type="text" placeholder="Name">
+                                        <input type="text" placeholder="Nombre Completo*" required>
                                     </div>
                                     <div>
-                                        <input type="text" placeholder="Phone Number">
+                                        <input type="text" placeholder="Teléfono">
                                     </div>
                                     <div>
-                                        <input type="email" placeholder="Email">
+                                        <input type="email" placeholder="Correo Electrónico*" required>
                                     </div>
                                     <div class="">
-                                        <input type="text" placeholder="Message" class="message_input">
+                                        <input type="text"
+                                            placeholder="Escribe aquí tus dudas, sugerencias o cualquier información"
+                                            class="message_input">
                                     </div>
                                     <div class=" d-flex justify-content-center ">
                                         <button type="submit">
-                                            Send
+                                            Enviar
                                         </button>
                                     </div>
                                 </div>
@@ -512,7 +507,7 @@
                 <div class="info_social">
                     <div class="d-flex justify-content-center">
                         <h4 class="">
-                            Seguir en
+                            SÍGUENOS
                         </h4>
                     </div>
                     <div class="social_box">
@@ -543,8 +538,7 @@
     <section class="container-fluid footer_section">
         <div class="container">
             <p>
-                &copy; 2019 All Rights Reserved By
-                <a href="https://html.design/">Free Html Templates</a>
+                &copy; 2023 Todos los derechos reservados
             </p>
         </div>
     </section>
@@ -559,5 +553,9 @@
 
 <!--15/12/2023 Nauzet - Se ha decidido qué tipo de página se iba a realizar (Fotografía), y se ha buscado un diseño acorde a nuestros gustos. Al final, se ha decidido hacer la página a partir de una plantilla de internet. -->
 
+
 <!-- Sinaí: He hecho el logotipo hemos estado hablando de que ibamos a hacer la web y tambien escogimos una platilla de internet   -->
-<!-- Sinai2929 -->
+
+<!-- 10/01/2024 -->
+
+<!-- Sinaí: el dia de hoy hemos estado colocando textos y nuevas imagenes para poner en la pagina  -->
