--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title></title>
+    <title>Portfolio</title>
 
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -44,14 +44,14 @@
                                 <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                                     <ul class="navbar-nav  ">
                                         <li class="nav-item ">
-                                            <a class="nav-link" href="index.html">Inicio <span
+                                            <a class="nav-link" href="index.html">Inicio<span
                                                     class="sr-only">(current)</span></a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="about.html"> Sobre Nosotros</a>
+                                            <a class="nav-link" href="about.html">Sobre Nosotros</a>
                                         </li>
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="portfolio.html"> Portfolio </a>
+                                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="contact.html">Contáctanos</a>
@@ -81,13 +81,13 @@
                     Nuestro Portfolio
                 </h2>
                 <p>
-                    Disfruta de nuestras fotos y
+                    Disfruta de nuestras fotos
                 </p>
             </div>
             <div class="portfolio_container layout_padding2">
                 <div class="box-1">
                     <div class="img-box b-1">
-                        <img src="images/p-1.jpg" alt="">
+                        <img src="images/flores.jpg" alt="">
                         <div class="btn-box">
                             <a href="" class="btn-1">
 
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="img-box b-2">
-                        <img src="images/p-2.jpg" alt="">
+                        <img src="images/tarta.jpg" alt="">
                         <div class="btn-box">
                             <a href="" class="btn-1">
 
@@ -106,7 +106,7 @@
                 <div class="box-2">
                     <div class="box-2-top">
                         <div class="img-box b-3">
-                            <img src="images/p-3.jpg" alt="">
+                            <img src="images/Montañas.jpg" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -116,7 +116,7 @@
                     </div>
                     <div class="box-2-top2">
                         <div class="img-box b-4">
-                            <img src="images/p-4.jpg" alt="">
+                            <img src="images/Lago.jpg" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -126,7 +126,7 @@
                     </div>
                     <div class="box-2-btm">
                         <div class="img-box b-5">
-                            <img src="images/p-5.jpg" alt="">
+                            <img src="images/gato.jpg" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="img-box b-6">
-                            <img src="images/p-6.jpg" alt="">
+                            <img src="images/chica.jpg" width="236px" height="340px" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -190,7 +190,7 @@
     <section class="container-fluid footer_section">
         <div class="container">
             <p>
-                Diseño creado por Eustaquio
+                &copy; 2023 Todos los derechos reservados
             </p>
         </div>
     </section>
