--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
 
 <body class="sub_page">
 
-    <div class="hero_area">
+    <div class="hero_area ">
         <!-- Inicio Seccion Header con Menú -->
-        <header class="header_section">
+        <header class="header_section cambiafondo">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-11 offset-lg-1">
