--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
 
 <body class="sub_page">
 
-    <div class="hero_area">
+    <div class="hero_area ">
         <!-- Inicio seccion Cabecera -->
-        <header class="header_section">
-            <div class="container-fluid">
+        <header class="header_section cambiafondo">
+            <div class="container-fluid ">
                 <div class="row">
                     <div class="col-lg-11 offset-lg-1">
                         <nav class="navbar navbar-expand-lg custom_nav-container ">
