--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                             <a class="nav-link" href="about.html">Sobre nosotros</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="portfolio.html">Portafolio</a>
+                                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="contact.html">Contáctanos</a>
