--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
                     </div>
                 </div>
             </div>
-            <div class="see_btn">
-                <a href="portfolio.html">
+            <div class="see_btn ">
+                <a href="portfolio.html"  >
                     Ver más
                 </a>
             </div>
@@ -421,7 +421,7 @@
                                 <div class="carousel-item ">
                                     <div class="detail-box">
                                         <h4>
-                                            Matias Curbello
+                                            Manolo Curbello
                                         </h4>
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -560,3 +560,46 @@
 
 
 <!-- Sinaí: el dia de hoy hemos estado colocando textos y nuevas imagenes para poner en la pagina  -->
+
+
+
+
+
+
+<!--  SER BREVE, no hace falta explicar en detalle.
+
+    INICIO - Sinai comienzo, yo resto.
+Se habla de como se encontró la página, la temática 
+y de cómo hemos ido modificando el código y la estructura. - --Sinaí--
+
+Mencionar los apartados, y de cómo son una 
+versión corta a diferencia de las paginas de cada tema. 
+
+Mostrar fotos, centrándose en 
+Jesús como símbolo de nuestra calidad y dedidación. 
+
+Hablar de logros y testimonios
+un poco por encima.
+
+Y finalizamos con el formulario 
+de contacto y las redes sociales.
+
+
+SOBRE NOSOTROS, PORTFOLIO, CONTACTO 
+Poco que decir, hablar un poco por encima que son 
+las versiones completas de las de inicio, o intentar alargarlo un poco. -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Somos Nauzet y Sinaí,  Nosotros hemos escogido la tematica de fotografia, a lo que decidimos coger una plantilla de google 
+    y descargarla despues modificamos el codigo y colocar las imagenes, cambiemos los colores y los textos  -->
