--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
 
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
 
     <title>Contáctanos</title>
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 </head>
 
 <body class="sub_page">
@@ -32,7 +31,7 @@
                                     Uliya
                                 </span>
                             </a>
-                            </a>
+                          
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +87,7 @@
             <div class="">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <form action="">
+                        <form action="get">
                             <div class="contact_form-container">
                                 <div>
                                     <div>
@@ -167,8 +166,8 @@
     </section>
     <!-- sección de pie de página -->
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script  src="js/jquery-3.4.1.min.js"></script>
+    <script  src="js/bootstrap.js"></script>
 
 </body>
 
