--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
 
     <title>Inicio</title>
 
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link href="css/responsive.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +31,7 @@
                                     Uliya
                                 </span>
                             </a>
-                            </a>
+                            
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -285,7 +284,7 @@
                 </div>
             </div>
             <div class="see_btn ">
-                <a href="portfolio.html"  >
+                <a href="portfolio.html"> 
                     Ver más
                 </a>
             </div>
@@ -465,7 +464,7 @@
             <div class="">
                 <div class="row">
                     <div class="col-md-8 mx-auto">
-                        <form action="">
+                        <form action="get">
                             <div class="contact_form-container">
                                 <div>
                                     <div>
@@ -495,7 +494,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- Fin Seccion contacto -->
 
@@ -544,8 +542,8 @@
     </section>
     <!-- Fin Seccion del footer -->
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script  src="js/jquery-3.4.1.min.js"></script>
+    <script  src="js/bootstrap.js"></script>
 
 </body>
 
@@ -563,14 +561,11 @@
 
 
 
-
-
-
 <!--  SER BREVE, no hace falta explicar en detalle.
 
     INICIO - Sinai comienzo, yo resto.
 Se habla de como se encontró la página, la temática 
-y de cómo hemos ido modificando el código y la estructura. - --Sinaí--
+y de cómo hemos ido modificando el código y la estructura. -Sinaí-
 
 Mencionar los apartados, y de cómo son una 
 versión corta a diferencia de las paginas de cada tema. 
@@ -587,19 +582,7 @@ de contacto y las redes sociales.
 
 SOBRE NOSOTROS, PORTFOLIO, CONTACTO 
 Poco que decir, hablar un poco por encima que son 
-las versiones completas de las de inicio, o intentar alargarlo un poco. -->
+las versiones completas de las de inicio, o intentar alargarlo un poco. 
 
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Somos Nauzet y Sinaí,  Nosotros hemos escogido la tematica de fotografia, a lo que decidimos coger una plantilla de google 
+ Somos Nauzet y Sinaí,  Nosotros hemos escogido la tematica de fotografia, a lo que decidimos coger una plantilla de google 
     y descargarla despues modificamos el codigo y colocar las imagenes, cambiemos los colores y los textos  -->
