--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
 
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
 
     <title>Portfolio</title>
 
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 </head>
 
 <body class="sub_page">
@@ -33,7 +32,7 @@
                                     Uliya
                                 </span>
                             </a>
-                            </a>
+                            
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -134,7 +133,7 @@
                             </div>
                         </div>
                         <div class="img-box b-6">
-                            <img src="images/chica.jpg" width="236px" height="340px" alt="">
+                            <img src="images/chica.jpg" width="236" height="340" alt="">
                             <div class="btn-box">
                                 <a href="" class="btn-1">
 
@@ -196,8 +195,8 @@
     </section>
     <!-- Pie de página de aleta -->
 
-    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 
 </body>
 
