--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="navbar-brand" href="index.html">
                                 <img src="images/logo.png" alt="">
                                 <span>
-                                    Uliya
+                                    uraya
                                 </span>
                             </a>
                             
@@ -195,7 +195,7 @@
                 </div>
                 <div class="detail-box">
                     <p>
-                        En Uliya, llevamos años capturando momentos preciosos y transformándolos en recuerdos duraderos. Desde nuestros humildes comienzos hasta hoy, hemos tenido el privilegio de compartir innumerables historias a través de la lente de nuestra cámara.
+                        En Uraya, llevamos años capturando momentos preciosos y transformándolos en recuerdos duraderos. Desde nuestros humildes comienzos hasta hoy, hemos tenido el privilegio de compartir innumerables historias a través de la lente de nuestra cámara.
                         <br><br>
                         En el corazón de nuestro trabajo está la creencia en la magia de la fotografía para contar historias. Nos esforzamos por capturar la esencia única de cada momento, creando imágenes que transmiten emociones genuinas y perduran en el tiempo.
                         <br><br>
@@ -579,10 +579,11 @@ un poco por encima.
 Y finalizamos con el formulario 
 de contacto y las redes sociales.
 
-
 SOBRE NOSOTROS, PORTFOLIO, CONTACTO 
 Poco que decir, hablar un poco por encima que son 
 las versiones completas de las de inicio, o intentar alargarlo un poco. 
 
- Somos Nauzet y Sinaí,  Nosotros hemos escogido la tematica de fotografia, a lo que decidimos coger una plantilla de google 
-    y descargarla despues modificamos el codigo y colocar las imagenes, cambiemos los colores y los textos  -->
+Somos Nauzet y Sinaí, Nosotros hemos escogido la tematica de fotografia, 
+a lo que decidimos coger una plantilla de google y 
+descargarla despues modificamos el codigo y colocar las imagenes, 
+cambiemos los colores y los textos  -->
